[package]
name = "rust_colors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
png = "0.17.6"
array-init = "2.0.1"
# Tried this for a faster shuffle, 1500 -> 900ms 
fastrand = "1.8.0"
# No native boolean vectors :(
bitvec = "1.0.1"
# Some faster hashing algos for our hashmaps/hashsets
fnv = "1.0.7"
# Concurrent hashmaps/sets
chashmap = "2.2.2"

[profile.release]
debug = true